--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -196,19 +196,19 @@
   // animating in
   .in-view {
     .cta-banner-list__content {
-      animation: fadeInLeft 1s ease-in-out forwards;
+      animation: fadeInLeft .65s ease-in-out forwards;
     }
     
     .cta-banner-list__background {
-      animation: fadeinSlight 1.25s ease-in-out .75s forwards;
+      animation: fadeinSlight .85s ease-in-out .5s forwards;
     }
     
     .cta-banner-list__buttons {
-      animation: fadein 1s ease-in-out forwards;
+      animation: fadein .65s ease-in-out forwards;
     }
     
     .icon-button {
-      animation: fadeInRight .5s ease-in-out forwards;
+      animation: fadeInRight .35s ease-in-out forwards;
     }
     @for $i from 1 through 6 {
       .icon-button:nth-child(#{$i}) {
