Add working exposed proximity block to locations view. Allow facets to continue to work.

--- a/docroot/themes/custom/tower_health/templates/block/block--exposedformfind-a-locationfind-location.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--exposedformfind-a-locationfind-location.html.twig
@@ -33,8 +33,6 @@
   {% endif %}
   {{ title_suffix }}
   {% block content %}
-    {{ content|without('find_doctor_search')}}
-
-    <a href="#" class="js-use-my-location" data-view="views-exposed-form-find-a-provider-find-doctor">{{ 'Use my location'|t }}</a>
+    {{ content }}
   {% endblock %}
 </div>
