add banner messages to appointment form page

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
@@ -13,7 +13,16 @@
   {% endblock %}
   
   {% block page_content %}
-    Emergency Block
+    {% include "@molecules/banner-message/banner-message.twig" with {
+      banner_text: emergency_banner
+    } %}
+    
+    {% if doctor_reference %}
+      {% include "@molecules/banner-message/banner-message.twig" with {
+        banner_text: "You are currently requesting an appointment with " ~ doctor_reference,
+        banner_type: 'secondary'
+      } %}
+    {% endif %}
     
     {% include "@molecules/rich-text/rich-text.twig" %}
     
