--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
@@ -24,6 +24,17 @@
       } %}
     {% endif %}
     
+    <form>
+    {% for item in form_sections %}
+      {% include "@organisms/form-section/form-section.twig" with {
+        section_heading_level: item.section_heading_level,
+        section_heading: item.section_heading,
+        section_items: item.section_items
+      } %}
+      
+    {% endfor %}
+    </form>
+    
     {% include "@molecules/rich-text/rich-text.twig" %}
     
     Form Sections
