modify basic header styles a bit

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -36,10 +36,10 @@
   }
   
   .basic-header--secondary & {
-    border-color: $trust;
+    border: none;
     
     &::before {
-      border-color: $trust;
+      content: none;
     }
   }
 }
