--- a/docroot/themes/custom/tower_health/templates/block/block--locationproximityfilter.html.twig
+++ b/docroot/themes/custom/tower_health/templates/block/block--locationproximityfilter.html.twig
@@ -30,9 +30,7 @@
 
 <div {{ bem('block') }}>
   {{ title_prefix }}
-  {% if label %}
-    <h2{{ title_attributes.addClass('h2') }}>{{ label }}</h2>
-  {% endif %}
+  <h2{{ title_attributes.addClass('h2') }}>{{ 'Zip Code'|t }}</h2>
   {{ title_suffix }}
   {% block content %}
     {{ content|without('find_location_search')}}
