--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/radio/_radio-item.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/radio/_radio-item.twig
@@ -1,5 +1,5 @@
 <li class="form-item--radio__item">
-  <label for="radio{{ key }}">
-    <input id="radio{{ key }}" name="radio" type="radio" class="radio" checked="checked" /> {{ radio_item }}
+  <label for="radio{{ key }}-{{ radio_id }}">
+    <input id="radio{{ key }}-{{ radio_id }}" name="radio" type="radio" class="radio" {% if checked %}checked="checked"{% endif %} /> {{ radio_item }}
   </label>
 </li>
