change basic header secondary style

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -36,10 +36,11 @@
   }
   
   .basic-header--secondary & {
-    border: none;
+    max-width: 1000px;
+    border-color: $trust;
     
     &::before {
-      content: none;
+      border-color: $trust;
     }
   }
 }
