--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
@@ -14,7 +14,7 @@
   margin-top: 0;
   margin-bottom: 1.5em;
   padding-bottom: .5em;
-  border-bottom: 4px solid $growth;
+  border-bottom: 1px solid $gray-lighter;
 }
 
 .form-section__item {
