add a menu name

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
@@ -28,7 +28,8 @@
   <div id="main-nav" class="main-nav">
     {% include "@molecules/menus/_menu.twig" with {
       menu_class: "main-menu",
-      items: header_menu_items
+      items: header_menu_items,
+      menu_name: "main-menu"
     } %}
   </div>
   
