--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -80,7 +80,8 @@
   width: 100%;
 
   @include breakpoint($bp3) {
-    background-color: #edeff8;
+    background-color: $white;
+    border-radius: 8px;
     display: none;
     visibility: hidden;
     height: auto;
@@ -93,7 +94,11 @@
     padding: 1em;
     margin-top: 0;
     z-index: 1;
-    column-count: 2;
+    box-shadow: 0 0 4px rgba($black, .25);
+  }
+  
+  @include breakpoint($bp4) {
+    padding: 2em;
   }
 
   &:hover {
@@ -118,5 +123,65 @@
 .main-menu--sub-2 {
   @include breakpoint($bp3) {
     display: none; // Never shown on large screens
+  }
+}
+
+.main-menu__item--form {
+  position: relative;
+  
+  .link {
+    @include adjust-font-size-to($label, .9);
+    text-transform: uppercase;
+    font-weight: 600;
+    position:absolute;
+    right: 1em;
+    text-decoration: none;
+    
+    @include breakpoint($bp3) {
+      right: 0;
+    }
+  }
+}
+
+.main-menu__form {
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  margin: 1em;
+  
+  .autocomplete-container {
+    width: 100%;
+    
+    label {
+      font-weight: 600;
+      margin-bottom: 1em;
+    }
+  }
+  
+  @include breakpoint($bp2) {
+    flex-direction: row;
+    align-items: flex-end;
+    
+    .autocomplete-container {
+      padding-right: .5em;
+    }
+    
+    .form-autocomplete {
+      margin-bottom: 0;
+    }
+    
+    .button {
+      padding: 1.5em 1.5em;
+    }
+  }
+  
+  @include breakpoint($bp3) {
+    margin: 0 0 2em 0;
+    padding-bottom: 2em;
+    border-bottom: 1px solid $trust-ltst; 
+    
+    .button {
+      padding: 1.6em 1.5em;
+    } 
   }
 }
