--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
@@ -2,13 +2,11 @@
   full_width: true
 } %}
 
-  {% block breadcrumbs %}
+  {% block page_content %}
     {% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
       breadcrumb: breadcrumb
     } %}
-  {% endblock %}
 
-  {% block page_content %}
     {% include "@organisms/location-hero/location-hero.twig" with {
       type: hero.type,
       title: hero.title,
@@ -21,8 +19,11 @@
       classes: hero.classes,
     } %}
 
-    {% include "@molecules/menus/section-menu/section-menu.twig" with {
-      "place_holder": "Navigation",
-    } %}
+    <div class="menu-wrapper">
+      {% include "@molecules/menus/side-menu/side-menu.twig" with {
+        items: section_items
+      } %}
+    </div>
   {% endblock %}
+
 {% endembed %}
