modify a bit to include some aria roles

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
@@ -1,5 +1,5 @@
 {{ attach_library('tower_health/main-menu') }}
-<button href="#" id="toggle-expand" class="toggle-expand">
+<button href="#" id="toggle-expand" class="toggle-expand" aria-controls='main-nav__container'>
   <span class="toggle-expand__open">
     {% include "@atoms/04-images/icons/_icon.twig" with {
       icon_base_class: "icon",
@@ -17,7 +17,7 @@
     <span class="toggle-expand__text">Close</span>
   </span>
 </button>
-<nav class="main-nav__container">
+<nav id='main-nav__container' class="main-nav__container" aria-expanded='true'>
   <div class="utility" id="utility">
     {% include "@molecules/menus/_menu.twig" with {
       menu_class: "utility-menu",
@@ -33,5 +33,5 @@
     } %}
   </div>
   
-  <button class="close-nav close-nav--mobile">Close Navigation Drawer</button>
+  <button aria-controls="main-nav__container" class="close-nav close-nav--mobile">Close Navigation Drawer</button>
 </nav>
