--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
@@ -66,6 +66,7 @@
         display: flex;
         visibility: visible;
         flex-wrap: wrap;
+        justify-content: space-between;
       }
     }
   }
@@ -268,11 +269,5 @@
     display: block;
     margin: 0;
     width: 48%;
-  }
-  
-  @include breakpoint($bp5) {
-    display: block;
-    margin: 0;
-    width: 33%;
   }
 }
