TH-284 adding box links

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
@@ -25,6 +25,10 @@
         items: section_items
       } %}
     </div>
+
+    {% include "@organisms/box-links/box-links.twig" with {
+      boxes: boxes
+    } %}
   {% endblock %}
 
 {% endembed %}
