--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/toggle-tip/toggle-tip.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/toggle-tip/toggle-tip.twig
@@ -1,5 +1,5 @@
 <div aria-role="tooltip" class="toggle-tip">
-  <button class="" aria-controls="{{info_id}}">
+  <button class="toggle-tip__toggle" aria-controls="{{info_id}}">
     i
     <span>Informational Tooltip</span>
   </button>
