--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -194,12 +194,21 @@
     }
   }
   
+  .autocomplete-search {
+    top: 84%;
+  }
+  
   @include breakpoint($bp2) {
     flex-direction: row;
     align-items: flex-end;
     
     .autocomplete-container {
       padding-right: .5em;
+    }
+    
+    .autocomplete-search {
+      top: 98%;
+      right: .5em;
     }
     
     .form-autocomplete {
