--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/link-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/link-list/link-list.twig
@@ -1,4 +1,4 @@
-<div class="link-list">
+<div class="link-list js-section-animation">
   <h2>{{ title }}</h2>
   <div class="link-list__wrapper">
     {% for item in items %}
