--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -256,6 +256,10 @@
   .location-hero__content {
     opacity: 0;
 
+    .icon-button {
+      opacity: 0;
+    }
+
     &::before {
       opacity: 0;
     }
