--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
@@ -1,4 +1,4 @@
-<div class="box-links">
+<div class="box-links js-section-animation">
   {% for box in boxes %}
     <a class="box-link" href="{{ link.url }}">
       <div style='background-image: linear-gradient(to top, #003056EE, #00305600), url("{{ box.img.src }}");'>
