--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-with-callout/image-with-callout.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-with-callout/image-with-callout.twig
@@ -1,4 +1,4 @@
-<div class="image-callout">
+<div class="image-callout js-section-animation">
   <div class="image-callout__image">
     <img src="{{ img.src }}" alt="{{ img.alt }}"/>
   </div>
