--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
@@ -76,20 +76,28 @@
   // animating in
   .in-view {
 
-    .box-link {
+    .box-link:nth-of-type(1) {
+      animation: fadeInLeft .65s ease-in-out forwards;
+      animation-delay: .5s
       opacity: 1;
     }
 
-    .box-link:nth-of-type(1),
-    .box-link:nth-of-type(3) {
-      animation: fadeInLeft .65s ease-in-out forwards;
-      animation-delay: .5s
+    .box-link:nth-of-type(2) {
+      animation: fadeInRight .65s ease-in-out forwards;
+      animation-delay: 1s
+      opacity: 1;
     }
 
-    .box-link:nth-of-type(2),
+    .box-link:nth-of-type(3) {
+      animation: fadeInLeft .65s ease-in-out forwards;
+      animation-delay: 1.5s;
+      opacity: 1;
+    }
+
     .box-link:nth-of-type(4) {
       animation: fadeInRight .65s ease-in-out forwards;
-      animation-delay: .5s
+      animation-delay: 2s
+      opacity: 1;
     }
   }
 }
