--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
@@ -78,13 +78,13 @@
 
     .box-link:nth-of-type(1) {
       animation: fadeInLeft .65s ease-in-out forwards;
-      animation-delay: .5s
+      animation-delay: .5s;
       opacity: 1;
     }
 
     .box-link:nth-of-type(2) {
       animation: fadeInRight .65s ease-in-out forwards;
-      animation-delay: 1s
+      animation-delay: 1s;
       opacity: 1;
     }
 
@@ -96,7 +96,7 @@
 
     .box-link:nth-of-type(4) {
       animation: fadeInRight .65s ease-in-out forwards;
-      animation-delay: 2s
+      animation-delay: 2s;
       opacity: 1;
     }
   }
