--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
@@ -6,12 +6,12 @@
 
     {% include "@organisms/location-hero/location-hero.twig" with {
       type: hero.type,
-      title: hero.title,
+      name: hero.name,
       address_1: hero.address_1,
       address_2: hero.address_2,
       directions: hero.directions,
-      main_phone: hero.main_phone,
-      alt_phone: hero.alt_phone,
+      phone: hero.phone,
+      numbers: hero.numbers,
       img: hero.img,
       classes: hero.classes,
     } %}
