--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
@@ -33,9 +33,9 @@ $base-line-height: 24px; // This line-height determines the basic unit of vertic
 // TYPE SCALE
 
 $xxxl-heading: 3.25 * $base-font-size;
-$xxl-heading: 2.35 * $base-font-size;
+$xxl-heading: 2.25 * $base-font-size;
 $xl-heading: 2 * $base-font-size;
-$lg-heading: 1.85 * $base-font-size;
+$lg-heading: 1.75 * $base-font-size;
 $md-heading: 1.5 * $base-font-size;
 $sm-heading: 1.25 * $base-font-size;
 $xs-heading: 1.15 * $base-font-size;
@@ -92,7 +92,9 @@ $bp1: 400px;
 $bp2: 600px;
 $bp3: 900px;
 $bp4: 1200px;
-$bp5: 1500px;
+$bp5: 1350px;
+
+$nav-breakpoint: 1025px;
 
 // =============================================================================
 // Spacing Variables
