adjust site header styles a bit

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -54,14 +54,14 @@
     }
   }
   
-  @include breakpoint($bp4) {
+  @include breakpoint($nav-breakpoint) {
     margin-top: 0;
-    top: 3em;
+    top: 2.25em;
   }
   
   @include breakpoint($bp5) {
     &::after {
-      right: calc(((100vw - 1500px) / -2 ) - 38px);
+      right: calc(((100vw - 1350px) / -2 ) - 38px);
     }
   }
 }
