--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -37,9 +37,11 @@
     }
   }
   
-  @include breakpoint($bp4) {
+  @include breakpoint($nav-breakpoint) {
     flex-wrap: nowrap;
-    
+  }
+  
+  @include breakpoint($bp4) {
     .header-logo {
       max-width: 300px;
       width: 25%;
@@ -122,10 +124,6 @@
   &:focus {
     color: $trust-aa;
     text-decoration: underline;
-  }
-  
-  @include breakpoint($bp4) {
-    @include adjust-font-size-to($sm-text, .9);
   }
 }
 
@@ -212,12 +210,20 @@
     margin-top: 1em;
   }
   
-  @include breakpoint($bp4) {
+  @include breakpoint($nav-breakpoint) {
     border-top: 4px solid $growth;
     margin-top: 0;
-    width: 70%;
+    width: 73%;
     left: auto;
     padding: 1em 2em 2em 0;
+  }
+  
+  @include breakpoint($nav-breakpoint 1070px) {
+    top: 74px;
+  }
+  
+  @include breakpoint(1070px) {
+    width: 70%;
   }
 }
 
@@ -264,7 +270,7 @@
     right: 2em;
     top: 0;
     background-color: $trust-ltst;
-    padding: 1em 1.25em .5em 1em;
+    padding: .9em 1.25em .5em 1em;
     z-index: 20;
     border-radius: 0 0 8px 8px;
     
@@ -286,7 +292,7 @@
   }
   
   @include breakpoint($bp4) {
-    padding: 1em 1.25em .65em 1em;
+    padding: .9em 1.25em .5em 1em;
   }
 }
 
